+refactor MainActivity, +add some new stuff to weather

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.astro">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_icon"
@@ -9,23 +11,32 @@
         android:roundIcon="@mipmap/ic_icon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
+        <activity android:name="com.example.astroweather.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity">
+        <activity
+            android:name="com.example.astroweather.settings.SettingsActivity"
+            android:label="@string/settings_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.astroweather.MainActivity" />
         </activity>
-        <activity android:name=".AboutActivity">
+        <activity
+            android:name="com.example.astroweather.AboutActivity"
+            android:label="@string/about_name">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+                android:value="com.example.astroweather.MainActivity" />
+        </activity>
+        <activity android:name="com.example.astroweather.settings.SelectCityActivity"
+            android:label="@string/city_name">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.astroweather.MainActivity" />
         </activity>
     </application>
 
